[SC-13316] fixed alignment of 'Save' button of note add dialog

--- a/src/app/crm/contacts/notes/note-add-dialog/note-add-dialog.component.less
+++ b/src/app/crm/contacts/notes/note-add-dialog/note-add-dialog.component.less
@@ -129,6 +129,7 @@
         padding-top: 0;
         justify-content: center;
         position: relative;
+        margin-bottom: -7px;
 
         .button-primary {
             width: 150px;
